{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 148,
  "lineage": "9b5879ce-c89e-6627-c913-38baded35c64",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kafka_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:899456967600:instance/i-05547a0d18cb99926",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05547a0d18cb99926",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "testkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ac2db8ebecb78baf",
            "private_dns": "ip-10-0-1-70.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.70",
            "public_ip": "54.87.178.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e734f9e7323607f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b75d42c69f0e91cf",
            "tags": {
              "CreatorId": "AROA5C26QEOYO4EL44ORR",
              "CreatorName": "srahman",
              "Name": "kafka_server",
              "maid_offhours": "off=[(M-F,21),(U,18)];on=[(M-F,6),(U,10)];tz=est"
            },
            "tags_all": {
              "CreatorId": "AROA5C26QEOYO4EL44ORR",
              "CreatorName": "srahman",
              "Name": "kafka_server",
              "maid_offhours": "off=[(M-F,21),(U,18)];on=[(M-F,6),(U,10)];tz=est"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c1e221eb6a67330a"
            ]
          },
          "dependencies": [
            "aws_security_group.kafka_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899456967600:internet-gateway/igw-00e7649a840f83a95",
            "id": "igw-00e7649a840f83a95",
            "owner_id": "899456967600",
            "vpc_id": "vpc-04922c28264d0c5d1"
          },
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899456967600:route-table/rtb-03289e59fba754575",
            "id": "rtb-03289e59fba754575",
            "owner_id": "899456967600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00e7649a840f83a95",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04922c28264d0c5d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ac0fc3d9d52ff76",
            "route_table_id": "rtb-03289e59fba754575",
            "subnet_id": "subnet-0b75d42c69f0e91cf"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.public_subnet",
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899456967600:security-group/sg-0c1e221eb6a67330a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1e221eb6a67330a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-20220907195213902000000001",
            "name_prefix": "terraform-",
            "owner_id": "899456967600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Kafka-sg"
            },
            "tags_all": {
              "Name": "Kafka-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04922c28264d0c5d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899456967600:subnet/subnet-0b75d42c69f0e91cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b75d42c69f0e91cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "899456967600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-04922c28264d0c5d1"
          },
          "dependencies": [
            "aws_vpc.kafka_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kafka_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899456967600:vpc/vpc-04922c28264d0c5d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039eeafadfb32ad81",
            "default_route_table_id": "rtb-0a9e56480cbd54d41",
            "default_security_group_id": "sg-0d3452b65334f5e44",
            "dhcp_options_id": "dopt-c147c1bb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04922c28264d0c5d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a9e56480cbd54d41",
            "owner_id": "899456967600",
            "tags": {
              "Name": "kafka_vpc"
            },
            "tags_all": {
              "Name": "kafka_vpc"
            }
          }
        }
      ]
    }
  ]
}